refactor: change function to lambda function and add final to respositories